Update infrastructure to include storage and secret

--- a/theDadApp/Pages/Index.cshtml
+++ b/theDadApp/Pages/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="jumbotron">
     <div><b>Machine:</b> @System.Environment.MachineName</div>
     <div><b>OS:</b> @System.Environment.OSVersion</div>
-    <div><b>my-secret:</b> @Config["my-secret"]</div>
+    <div><b>my-secret:</b> @Config["MySecret"]</div>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
